--- a/stats/index.html
+++ b/stats/index.html
@@ -12,23 +12,23 @@
 <!--   Support the Free Software Foundation   -->
 <!--           (http://www.fsf.org)           -->
 <!--                                          -->
-<!-- *** Generated: 28-Apr-2014 00:30 CEST *** -->
+<!-- *** Generated: 30-Apr-2014 00:30 CEST *** -->
 
 <HTML lang="en">
 <HEAD>
- <TITLE>Usage statistics for gartenzwerge.verbunden.net - Summary by Month</TITLE>
+ <TITLE>Usage statistics for dev1.gartenzwerge.verbunden.net - Summary by Month</TITLE>
 </HEAD>
 
 <BODY BGCOLOR="#E8E8E8" TEXT="#000000" LINK="#0000FF" VLINK="#FF0000">
-<H2>Usage statistics for gartenzwerge.verbunden.net</H2>
+<H2>Usage statistics for dev1.gartenzwerge.verbunden.net</H2>
 <SMALL><STRONG>
 Summary by Month<BR>
-Generated 28-Apr-2014 00:30 CEST<BR>
+Generated 30-Apr-2014 00:30 CEST<BR>
 </STRONG></SMALL>
 <CENTER>
 <HR>
 <P>
-<IMG SRC="usage.png" ALT="Usage summary for gartenzwerge.verbunden.net" HEIGHT=256 WIDTH=512><P>
+<IMG SRC="usage.png" ALT="Usage summary for dev1.gartenzwerge.verbunden.net" HEIGHT=256 WIDTH=512><P>
 <TABLE WIDTH=600 BORDER=2 CELLSPACING=1 CELLPADDING=1>
 <TR><TH HEIGHT=4></TH></TR>
 <TR><TH COLSPAN=11 BGCOLOR="#C0C0C0" ALIGN=center>Summary by Month</TH></TR>
@@ -52,19 +52,19 @@ Generated 28-Apr-2014 00:30 CEST<BR>
 <TD ALIGN=right><FONT SIZE="-1">4</FONT></TD>
 <TD ALIGN=right><FONT SIZE="-1">10</FONT></TD>
 <TD ALIGN=right><FONT SIZE="-1">0</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">6</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">258</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">9</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">221</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">95</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">227</FONT></TD></TR>
+<TD ALIGN=right><FONT SIZE="-1">11</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">296</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">14</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">239</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">104</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">247</FONT></TD></TR>
 <TR><TH HEIGHT=4></TH></TR>
 <TR><TH BGCOLOR="#C0C0C0" COLSPAN=6 ALIGN=left><FONT SIZE="-1">Totals</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">258</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">9</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">221</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">95</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">227</FONT></TH></TR>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">296</FONT></TH>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">14</FONT></TH>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">239</FONT></TH>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">104</FONT></TH>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">247</FONT></TH></TR>
 <TR><TH HEIGHT=4></TH></TR>
 </TABLE>
 </CENTER>
